fixes button display issues on smaller devices

--- a/style.css
+++ b/style.css
@@ -382,12 +382,14 @@ button {
 
 button i {
     font-size: 30px;
+    width: 100%
 }
 #controlls > button {
     position: relative;
     width: 40px;
     height:40px;
     margin: 2px;
+    padding: 2px;
 }
 
 #controlls button {
